<resources>
    <string name="app_name">FlexiBank</string>
    <string name="dashboard">Dashboard</string>
    <string name="todo">TODO</string>
    <string name="start_saving_the_smart_way_with_flexibank">Start Saving the Smart Way with FlexiBank</string>
    <string name="time_saving">Time-Saving Fund Transfers and Easy Accessibility</string>
    <string name="feature">Access  4 Main Functionalities with a Single Finger</string>
    <string name="login_in">Login In</string>
    <string name="register_in">Register In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="let_started">"Let's get started!"</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="fail_sending_error_log">Couldn\'t send error logs to server</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec
        risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel rutrum
        tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi
        tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh. Phasellus
        at commodo eros, non aliquet metus. Sed maximus nisl nec dolor bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie
        quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet,
        tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem.
        Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc, quis imperdiet eros
        placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat diam. Etiam
        vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida.
        Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper sodales. Praesent bibendum
        rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce dictum libero quis
        erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="fill_your_information_below_to_continue">Fill your information below to continue</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="send_code_via_email">Send code via email</string>
    <string name="send_code_via_sms">Send code via SMS</string>
    <string name="reset_code_in">Reset code in</string>
    <string name="identity_card">Identity card</string>
    <string name="passport">Passport</string>
    <string name="identity_verification">Identity verification</string>
    <string name="continue_text">Continue</string>
    <string name="select_the_type_of_document_that_you_are_going_to_use_for_identity_verification">Select the type of document that you are going to use for identity verification.</string>
    <string name="title_activity_verify_document">VerifyDocumentActivity</string>
    <string name="verify_your_identity">Verify Your Identity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_home">Home</string>
    <string name="title_verify_your_identity">Verify your identity</string>
    <string name="take_photo">Take Photo</string>
    <string name="position_the_front_of_your_document_in_the_frame">Position the front of your document in the frame</string>
    <string name="make_sure_your_details_are_clear_and_unobstructed">Make sure your details are clear and unobstructed</string>
    <string name="submit">Submit</string>
    <string name="retake_photo">Retake Photo</string>
    <string name="take_a_selfie">Take a selfie</string>
    <string name="we_ll_compare_this_with_your_document">We\'ll compare this with your document</string>
    <string name="your_face_and_background_will_be_captured_during_this_process">Your face and background will be captured during this process</string>
    <string name="remove_anything_that_covers_your_face_eyeglasses_are_okay">Remove anything that covers your face. Eyeglasses are okay</string>
    <string name="face_forward_and_make_sure_your_eyes_are_clearly_visible">Face forward and make sure your eyes are clearly visible</string>
    <string name="result_list">Result of Liveliness: %s photos</string>
    <string name="select_language">select langauge</string>
    <string name="select_your_country_code">Select your country code</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="get_started_using_your_digital_banking_with_flexibank">Get started using your digital banking with Flexibank.</string>
    <string name="all_done">All Done!</string>
    <string name="get_started">Get Started</string>
    <string name="account_number_usd">Account Number - USD</string>
    <string name="available_balance">Available Balance</string>
    <string name="saving_account">Saving Account</string>
    <string name="quick_transfer">Quick Transfer</string>
    <string name="scan">Scan</string>
    <string name="card">Card</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="hub">Hub</string>
    <string name="upcoming_payment">Upcoming payment</string>
    <string name="upload_qr_code">Upload Qr code</string>
    <string name="default_error">No additional error information provided.</string>
    <string name="error_crash_title">Oops!</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="copy_stack_trace_message">Stack trace copied to clipboard</string>
    <string name="copy_stack_trace_content_desc">Copy error details</string>
    <string name="restart">Restart App</string>
    <string name="confirm">Confirm</string>
    <string name="enter_your_account_number">Enter your account number</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="fill_in_your_information_that_you_have_registered_with_your_flexibank_account">Fill in your information that you have registered with your Flexibank account.</string>
    <string name="choose_an_option_to_receive_the_otp_code">Choose an option to receive the OTP code</string>
    <string name="choose_an_option_to_receive_the_otp_code_we_will_send_you_a_confirmation_code_there">Choose an option to receive the OTP code. We will send you a confirmation code there.</string>
    <string name="phone">phone</string>
    <string name="icon_forward">Icon forward</string>
    <string name="email">Email</string>
</resources>