<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"
        android:tooltipText="Home" />
    <item
        android:id="@+id/navigation_card"
        android:icon="@drawable/img_card"
        android:title="@string/card"
        android:tooltipText="Card" />
    <item
        android:id="@+id/navigation_scan"
        android:enabled="false"
        android:icon="@null"
        android:title="" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/img_favorite"
        android:title="@string/favorite"
        android:tooltipText="@string/favorite" />
    <item
        android:id="@+id/navigation_hub"
        android:icon="@drawable/img_hub"
        android:title="@string/hub"
        android:tooltipText="@string/hub" />
</menu>