<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:paddingHorizontal="16dp"
    android:paddingVertical="24dp">

    <TextView
        android:id="@+id/letStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/identity_verification"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fillInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/select_the_type_of_document_that_you_are_going_to_use_for_identity_verification"
        app:layout_constraintTop_toBottomOf="@id/letStart" />


    <LinearLayout
        android:id="@+id/nid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:background="@drawable/rounded_border"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="24dp"
        app:layout_constraintBottom_toTopOf="@id/passport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:importantForAccessibility="no"
            android:src="@drawable/img_nid" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:text="@string/identity_card"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imgNidSelected"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/circle_active_drawable" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/passport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="24dp"
        app:layout_constraintBottom_toTopOf="@id/btnVerify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:importantForAccessibility="no"
            android:src="@drawable/img_passport" />

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:text="@string/passport"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imgPassportSelected"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:importantForAccessibility="no"
            android:src="@drawable/circle_drawable" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:fitsSystemWindows="false"
        android:fontFamily="@font/inter"
        android:lineSpacingExtra="5sp"
        android:padding="16dp"
        android:text="@string/continue_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>




