<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.view.verifyDocument.VerifyCapturedDocumentFragment">

    <include
        android:id="@+id/appBar"
        layout="@layout/flexi_app_bar" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgDocPreview"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_border_camera"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/appBar"
        app:shapeAppearanceOverlay="@style/CircularImageView" />

    <TextView
        android:id="@+id/txtConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="5dp"
        android:text="@string/make_sure_your_details_are_clear_and_unobstructed"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgDocPreview" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/submit"
        android:textStyle="bold"
        app:cornerRadius="4dp"
        app:layout_constraintTop_toBottomOf="@id/txtConfirm" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRetake"
        style="@style/buttonOutlineStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/retake_photo"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnSubmit" />

</androidx.constraintlayout.widget.ConstraintLayout>