<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.view.verifyDocument.LivelinessGuidelineFragment">

    <include
        android:id="@+id/appBar"
        layout="@layout/flexi_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/letStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="start"
        android:text="@string/take_a_selfie"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        tools:layout_editor_absoluteY="224dp" />

    <TextView
        android:id="@+id/fillInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/we_ll_compare_this_with_your_document"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/letStart" />

    <LinearLayout
        android:id="@+id/infoPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/fillInfo">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:backgroundTint="@color/blue"
            android:importantForAccessibility="no"
            android:src="@drawable/img_peopel_circle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/face_forward_and_make_sure_your_eyes_are_clearly_visible"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/infoGlass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/infoPeople">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:backgroundTint="@color/blue"
            android:importantForAccessibility="no"
            android:src="@drawable/img_eyeglasses" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/remove_anything_that_covers_your_face_eyeglasses_are_okay"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@id/btnSelfie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:backgroundTint="@color/blue"
            android:importantForAccessibility="no"
            android:src="@drawable/img_information" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/your_face_and_background_will_be_captured_during_this_process"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSelfie"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        android:text="@string/take_a_selfie"
        android:textStyle="bold"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>